@@ -1,4 +1,4 @@
-DIST squash_dir-10.15.tar.bz2 20444 RMD160 bc86361dcce1434bec480c70d39a7f120e762ddf SHA1 ca687eaf2eb511c895bb773043e3f4b52eaa6ea5 SHA256 315960ddd8f024372fd68675f1027cce7a79406a340173509f70ced513f20d9e
-EBUILD squash_dir-10.15.ebuild 1923 RMD160 f41cab4592bd212f215f958e3671ca4bfe9a4c22 SHA1 7c2d5f668511cc3b797d33fd0bb620dfd4daf6a4 SHA256 16b107d92194ac3a41f1eb0e1b49165abc7f97cfd2726c27f6d971dea49df713
-MISC ChangeLog 2730 RMD160 2f00c30359f38d953fa168593bc9c90b7d8d597b SHA1 12316ae59e32b79aa7b9e57b97674becf9df512c SHA256 8f447600b5cf02a46ae7ba4d12fe3120a1f9f95b89e733d1ffff18d70e919723
+DIST squash_dir-10.16.tar.bz2 20990 RMD160 ae506672d731a87a7ae2719c7d292f1eb70a152c SHA1 7dab53ec7f7642057001d5e3c9d66c7d1f61cdb5 SHA256 f096994776a46c6a4cb1dac457c2db7a8863346f7ae8e59c6e5b27259291bde9
+EBUILD squash_dir-10.16.ebuild 1971 RMD160 630b6843dd87feecbc4a8afa97906ed2bad4d020 SHA1 16e80807e800be879d7eec35556739ee610894e7 SHA256 a0021006f62bf048c4823d3c4f9c230acde9f86d628f12d08aec8c86e0b3f52f
+MISC ChangeLog 2866 RMD160 580e4f4606c10a923627fd7cc8ad248614f47eda SHA1 6525a19b7a6ab97f2007c7bdbe4e29470a86e65b SHA256 48af63254edf39dff236a350e354e1a5d787ed1ee20d9de5fd5aa166fe1ab482
 MISC metadata.xml 524 RMD160 695348b2ec91e6e657132f92d92355b3a9aa9cb3 SHA1 031aa7e4a43e9653e6ff5f5760f109cff893278c SHA256 9f7f3ee8acbeea6d82c33bfbab9ddf6076bac7f80f5789c95173223c2c658037
