@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
+squash_dir-10.16 (27 Nov 2010)
+
+  27 Nov 2010; Martin Väth <martin@mvath.de>
+  Version bump. Provide zsh-completion
+
 squash_dir-10.15 (26 Nov 2010)
 
   26 Nov 2010; Martin Väth <martin@mvath.de>
